# Rag-Application-using-OpenAI-Langchain-FAISS

./: README.md  create_project_structure.py  pyproject.toml
notebook/: research.ipynb
rag_project/app/: main.py
rag_project/config/: settings.py
rag_project/src/embeddings/: embedder.py
rag_project/src/ingestion/: loader.py
rag_project/src/llm/: groq_llm.py
rag_project/src/pipeline/: rag_chain.py
rag_project/src/vectorstore/: faiss.py
