[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flagembedding>=1.3.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.2",
    "openai>=1.90.0",
    "python-dotenv>=1.1.0",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
]
